Put main header of page into position sticky

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
 * {
     margin: 0;
     padding: 0;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: -1;
+  background-color: white;
 }
 
 .navbar {
