--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,15 @@
     padding: 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
+      
 }
 
 header {
-  position: sticky;
-  top: 0;
-  z-index: -1;
-  background-color: white;
-}
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: white;
+  }
 
 .navbar {
   display: flex;
@@ -23,6 +24,17 @@ header {
     margin-right: 20px;
     text-decoration: none;
     color: black;
+    font-size: 20px;
+    font-weight: bold;
+}
+#main-heading {
+    width: 40%;
+    font-size: 30px;
+    font-style: italic;
+    margin:auto;
+    text-align: left;
+    border-bottom: 1px solid grey;
+    margin-bottom: 20px;
 }
 
 .right-item {
@@ -34,8 +46,74 @@ header {
     font-size: 12px;
 }
 
+.media-icons {
+  display: inline-flex;
+  justify-content: space-between;
+  width: 40%;
+  margin-left: 30%;
+  margin-bottom: 20px;
+
+}
 p {
     width: 50%;
     margin: auto;
 }
-
+.main-figure {
+    text-align: center;
+    margin: 20px auto;
+}
+figcaption {
+    width: 70%;
+    margin: auto;
+    text-align: left;
+    font-size: 12px;
+    margin: 10px auto 50px auto;
+}
+a {
+    text-decoration: none;
+    color: black;
+}
+.newsletters {
+    width: 400px;
+    border: 1px solid grey;
+    margin-bottom: 20px;
+    align-items:center;
+}
+.astronomy {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+    align-items: center;
+}
+.object {
+    width: 24%;
+    align-items: center;
+    margin: 0 1px;
+    font-size: 12px;
+}
+.figcaption2 {
+    width: 670px;
+    text-align: center;
+}
+.appreciation {
+    text-align: center;
+}
+.appreciation-link {
+    text-align: center;
+    color: blue;
+    
+}
+.middle-heading {
+    margin-left: 25%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.big-telescope {
+    text-align: center;
+    margin: 20px auto;
+}
+.figcaption-two {
+    
+    width: 50%;
+    margin-left: 25%;
+}
