--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    
       
 }
 
@@ -57,6 +57,7 @@ header {
 p {
     width: 50%;
     margin: auto;
+    font-size: 20px;
 }
 .main-figure {
     text-align: center;
@@ -72,6 +73,7 @@ figcaption {
 a {
     text-decoration: none;
     color: black;
+    
 }
 .newsletters {
     width: 400px;
@@ -125,7 +127,7 @@ a {
   display: flex;
   flex-wrap: wrap;
 }
-.
+
     
 .object-details {
     font-size: 12px;
@@ -149,5 +151,51 @@ a {
     padding-top: 20px;
     padding-bottom: 20px;
     font-weight: 400;
-
 }
+.services {
+    position: relative;
+    border-left: 1px solid grey;
+    margin-right: 10px;
+    width: 200px;
+    float: right;
+}
+.services > div {
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    text-align: justify;
+  }
+  a:hover {
+      text-decoration: underline;
+  }
+  .concerns {
+    display: flex;
+    font-size: 10px;
+    
+    margin: auto;
+  }
+  .last-section {
+      width: 90%;
+      margin: auto;
+      border-top: 2px solid grey;
+      border-bottom: 1px solid grey;
+  }
+  .last-section-head {
+    display: flex;
+    margin-top: 1px;
+    border-top: 1px solid grey;
+    padding: 5px 0;
+    justify-content: space-between;
+  }
+  .last-details > a {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+  }
+  .last-summary {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+    font-size: 14px;
+  }
