--- a/styles.css
+++ b/styles.css
@@ -27,14 +27,14 @@ header {
     font-size: 20px;
     font-weight: bold;
 }
-#main-heading {
+.main-heading {
     width: 40%;
     font-size: 30px;
     font-style: italic;
     margin:auto;
     text-align: left;
     border-bottom: 1px solid grey;
-    margin-bottom: 20px;
+    padding-bottom: 30px;
 }
 
 .right-item {
@@ -48,7 +48,7 @@ header {
 
 .media-icons {
   display: inline-flex;
-  justify-content: space-between;
+  margin-top: 30px;
   width: 40%;
   margin-left: 30%;
   margin-bottom: 20px;
@@ -75,23 +75,78 @@ a {
     color: black;
     
 }
-.newsletters {
-    width: 400px;
+.cards {
+    width: 250px;
     border: 1px solid grey;
     margin-bottom: 20px;
     align-items:center;
+    position: relative;
+    margin-right: 20px;
 }
-.astronomy {
+.suggestions {
+    display:flex;
+}
+.suggestions-img {
+    width: 80px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+.suggestions-svg {
+    position: absolute;
+    right: 4%;
+    top: 4%;
+
+}
+.suggestions-wording {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.suggestions-ending {
+    margin-top: 50px;
+    margin-left: 10px;
+    margin-bottom: 14px;
+    color: blue;
+}
+.suggestions-ending > a {
+    color: blue;
+}
+.major-object {
+    display:flex;
+
+}
+.more {
     display: flex;
-    flex-wrap: wrap;
-    width: 60%;
-    align-items: center;
 }
-.object {
-    width: 24%;
-    align-items: center;
-    margin: 0 1px;
+.more-in-space {
+    margin-top: 20px;
+    margin-left: 10px;
+    text-decoration: none;
+}
+.more-title {
     font-size: 12px;
+    text-align: right;
+}
+.more-description {
+    color: grey;
+    margin-top: 0px;
+}
+.more-img {
+    width: 260px;
+}
+ .astronomy {
+    margin-top: 20px;
+} 
+.Theory-hr {
+    width: 10%;
+    margin-top: 40px;
+}
+ .object {
+    margin-right: 20px;
+    
+} 
+.object-image {
+    width: 200px;
+    height: 130px;
 }
 .figcaption2 {
     width: 670px;
@@ -100,11 +155,13 @@ a {
 .appreciation {
     text-align: center;
 }
-.appreciation-link {
-    text-align: center;
+.appreciation > a {
     color: blue;
-    
 }
+ .editors {
+     display: flex;
+ }
+
 .middle-heading {
     margin-left: 25%;
     margin-top: 10px;
@@ -131,6 +188,8 @@ a {
     
 .object-details {
     font-size: 12px;
+    width: 100%;
+    text-align: left;
 }
 .more-in-space {
     position: relative;
@@ -198,4 +257,16 @@ a {
     justify-content: space-between;
     width: 80%;
     font-size: 14px;
+  }
+  .editors-heading {
+      margin-top: 10px;
+      margin-bottom: 10px;
+  }
+  .editors-img {
+      width: 260px;
+      margin-bottom: 0px;
+  }
+  .editors-fig {
+      font-size: 12px;
+      text-align: right;
   }
