--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,15 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
-      
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    background-color: white;
-  }
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: white;
+}
 
 .navbar {
   display: flex;
@@ -19,45 +17,53 @@ header {
   padding: 10px;
   border-bottom: 1px solid grey;
 }
-.socials {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-    margin-top: 30px;
-}    
-.read-comments {
-    margin-right: 25px;
 
+.socials {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
+
+.read-comments {
+  margin-right: 25px;
+}
+
+.large-img {
+  width: 70%;
+}
+
 .read-comments > a {
-    color: white;
-    background-color:  #326892;;
-    padding: 10px;
+  color: white;
+  background-color: #326892;
+  padding: 10px;
 }
+
 .one {
-    margin-right: 20px;
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
+  margin-right: 20px;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
 }
+
 .main-heading {
-    width: 40%;
-    font-size: 30px;
-    font-style: italic;
-    margin:auto;
-    text-align: left;
-    border-bottom: 1px solid grey;
-    padding-bottom: 30px;
+  width: 40%;
+  font-size: 30px;
+  font-style: italic;
+  margin: auto;
+  text-align: left;
+  border-bottom: 1px solid grey;
+  padding-bottom: 30px;
 }
 
 .right-item {
-    background-color: #326892;
-    color: whitesmoke;
-    text-decoration: none;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 12px;
+  background-color: #326892;
+  color: whitesmoke;
+  text-decoration: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 12px;
 }
 
 .media-icons {
@@ -66,232 +72,266 @@ header {
   width: 40%;
   margin-left: 30%;
   margin-bottom: 20px;
-
 }
+
 p {
-    width: 50%;
-    margin: auto;
-    font-size: 20px;
+  width: 50%;
+  margin: auto;
+  font-size: 20px;
 }
+
 .main-figure {
-    text-align: center;
-    margin: 20px auto;
+  text-align: center;
+  margin: 20px auto;
 }
+
 figcaption {
-    width: 70%;
-    margin: auto;
-    text-align: left;
-    font-size: 12px;
-    margin: 10px auto 50px auto;
+  width: 70%;
+  margin: auto;
+  text-align: left;
+  font-size: 12px;
+  margin: 10px auto 50px auto;
 }
+
 a {
-    text-decoration: none;
-    color: black;
-    
+  text-decoration: none;
+  color: black;
 }
+
 .cards {
-    width: 30%;
-    border: 1px solid grey;
-    margin-bottom: 20px;
-    align-items:center;
-    position: relative;
-    margin: 0 0 0 2%;
+  width: 30%;
+  border: 1px solid grey;
+  margin-bottom: 20px;
+  align-items: center;
+  position: relative;
+  margin: 0 0 0 2%;
 }
+
 .suggestions {
-    display:flex;
+  display: flex;
 }
+
 .suggestions-img {
-    width: 80px;
-    margin-left: 10px;
-    margin-top: 10px;
+  width: 80px;
+  margin-left: 10px;
+  margin-top: 10px;
 }
+
 .suggestions-svg {
-    position: absolute;
-    right: 4%;
-    top: 4%;
-
+  position: absolute;
+  right: 4%;
+  top: 4%;
 }
+
 .suggestions-wording {
-    margin-top: 10px;
-    margin-left: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
-.suggestions-ending {
-    margin-top: 50px;
-    margin-left: 10px;
-    margin-bottom: 14px;
-    color: blue;
-}
-.suggestions-ending > a {
-    color: blue;
-}
-.major-object {
-    display:flex;
 
+.suggestions-ending {
+  margin-top: 50px;
+  margin-left: 10px;
+  margin-bottom: 14px;
+  color: blue;
 }
+
+.suggestions-ending > a {
+  color: blue;
+}
+
+.major-object {
+  display: flex;
+}
+
 .more {
-    display: flex;
-    width: 96%;
+  display: flex;
+  width: 96%;
 }
+
 .more-in-space {
-    margin-top: 20px;
-    text-decoration: none;
-    width: 10%;
-    margin-left: 2%;
+  margin-top: 20px;
+  text-decoration: none;
+  width: 10%;
+  margin-left: 2%;
 }
+
 .more-title {
-    font-size: 12px;
-    text-align: right;
+  font-size: 12px;
+  text-align: right;
 }
+
 .more-description {
-    color: grey;
-    margin-top: 0px;
+  color: grey;
+  margin-top: 0px;
 }
+
 .more-img {
-    width: 100%;
+  width: 100%;
 }
- .astronomy {
-    margin-top: 20px;
-} 
+
+.astronomy {
+  margin-top: 20px;
+}
+
 .Theory-hr {
-    width: 10%;
-    margin-top: 40px;
+  width: 10%;
+  margin-top: 40px;
 }
- .object {
-    margin-right: 20px;
-    
-} 
+
+.object {
+  margin-right: 20px;
+}
+
 .object-image {
-    width: 200px;
-    height: 130px;
+  width: 200px;
+  height: 130px;
 }
+
 .figcaption2 {
-    width: 670px;
-    text-align: center;
+  width: 670px;
+  text-align: center;
 }
+
 .appreciation {
-    text-align: center;
+  text-align: center;
 }
+
 .appreciation > a {
-    color: blue;
+  color: blue;
 }
- .editors {
-     display: flex;
- }
+
+.editors {
+  display: flex;
+}
 
 .middle-heading {
-    margin-left: 25%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-left: 25%;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
+
 .big-telescope {
-    text-align: center;
-    margin: 20px auto;
+  text-align: center;
+  margin: 20px auto;
 }
+
 .figcaption-two {
-    width: 50%;
-    margin-left: 25%;
+  width: 50%;
+  margin-left: 25%;
 }
+
 .inflation {
-    width: 1000px;
-    margin: 0px auto;
-    padding: 5px 5px;
+  width: 1000px;
+  margin: 0px auto;
+  padding: 5px 5px;
 }
+
 .astronomy {
   display: flex;
   flex-wrap: wrap;
 }
 
-    
 .object-details {
-    font-size: 12px;
-    width: 100%;
-    text-align: left;
+  font-size: 12px;
+  width: 100%;
+  text-align: left;
 }
+
 .more-in-space {
-    position: relative;
-    width: 80%;
+  position: relative;
+  width: 80%;
 }
+
 .popular {
   width: 400px;
-  
+
   border-top: 1px solid black;
   margin-right: 10px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 14px;
   padding-top: 20px;
-
 }
+
 .popular > h3 {
-    border-top: 1px solid grey;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-weight: 400;
+  border-top: 1px solid grey;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-weight: 400;
 }
+
 .services {
-    
-    border-left: 1px solid grey;
-
+  border-left: 1px solid grey;
 }
+
 .services > div {
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    text-align: justify;
-  }
-  a:hover {
-      text-decoration: underline;
-  }
-  .concerns {
-    display: flex;
-    font-size: 10px;
-    
-    margin: auto;
-  }
-  .last-section {
-      width: 90%;
-      margin: auto;
-      border-top: 2px solid grey;
-      border-bottom: 1px solid grey;
-  }
-  .last-section-head {
-    display: flex;
-    margin-top: 1px;
-    border-top: 1px solid grey;
-    padding: 5px 0;
-    justify-content: space-between;
-  }
-  .last-details > a {
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-  }
-  .last-summary {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-right: 20px;
-    font-size: 14px;
-  }
-  .editors-heading {
-      margin-top: 10px;
-      margin-bottom: 10px;
-  }
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  text-align: justify;
+}
 
-  .grid {
-      display: grid;
-      grid-template-columns: 70% 30%;
-  }
+a:hover {
+  text-decoration: underline;
+}
 
-  .article-bottom {
-     margin: 10px 0 20px 0;
-  }
-  .completion {
-      display: grid;
-      grid-template-columns: 80% 20%;
-  }
-  .concerns {
-      display: flex;
-      justify-content: space-around;
-      width: 90%;
-      margin-bottom: 20px;
-  }
+.concerns {
+  display: flex;
+  font-size: 10px;
+
+  margin: auto;
+}
+
+.last-section {
+  width: 90%;
+  margin: auto;
+  border-top: 2px solid grey;
+  border-bottom: 1px solid grey;
+}
+
+.last-section-head {
+  display: flex;
+  margin-top: 1px;
+  border-top: 1px solid grey;
+  padding: 5px 0;
+  justify-content: space-between;
+}
+
+.last-details > a {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.last-summary {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-right: 20px;
+  font-size: 14px;
+}
+
+.editors-heading {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 70% 30%;
+}
+
+.article-bottom {
+  margin: 10px 0 20px 0;
+}
+
+.completion {
+  display: grid;
+  grid-template-columns: 80% 20%;
+}
+
+.concerns {
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+  margin-bottom: 20px;
+}
