--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  
 }
 
 header {
@@ -217,12 +218,11 @@ figcaption {
 
 .inflation {
   width: 1000px;
-  margin: 0 auto;
+  margin: 20px auto;
   padding: 5px 5px;
 }
 
 .astronomy {
-  display: flex;
   flex-wrap: wrap;
   margin-top: 20px;
 }
