--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,7 @@ figcaption {
 
 .suggestions {
   display: flex;
+  margin-left: 2%;
 }
 
 .suggestions-img {
@@ -144,14 +145,21 @@ figcaption {
 .more {
   display: flex;
   width: 96%;
+  margin-left: 2%;
 }
 
 .more-in-space {
-  margin-top: 20px;
+  margin-top: 10px;
   text-decoration: none;
   margin-left: 2%;
   position: relative;
   width: 80%;
+}
+
+.more-heading {
+  margin-left: 4%;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .more-title {
@@ -302,13 +310,15 @@ a:hover {
 }
 
 .editors-heading {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 10px;
+  margin-left: 4%;
 }
 
-.grid {
+.grid-container {
   display: grid;
   grid-template-columns: 70% 30%;
+  grid-gap: 10px;
 }
 
 .article-bottom {
@@ -336,4 +346,54 @@ a:hover {
 .editors-side-img {
   width: 100px;
   margin-right: 5px;
+}
+
+/* form {
+  font-weight: bold;
+} */
+fieldset {
+  width: 50%;
+  margin: 0 auto;
+  padding: 30px;
+}
+legend {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bold;
+  color: #326892;
+  font-size: 1.5rem;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  margin-bottom: 5px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  color:  #326892;
+}
+
+.radio-buttons {
+  display: block;
+}
+
+textarea {
+  width: 300px;
+  height: 100px;
+  
+}
+
+button {
+  padding: 5px;
+  background-color: #7fa0b9;
+  width: 100px;
+  border-radius: 5px;
+}
+
+.credentials {
+  width: 300px;
 }
