--- a/styles.css
+++ b/styles.css
@@ -348,16 +348,14 @@ a:hover {
   margin-right: 5px;
 }
 
-/* form {
-  font-weight: bold;
-} */
 fieldset {
   width: 50%;
   margin: 0 auto;
   padding: 30px;
 }
+
 legend {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: bold;
   color: #326892;
   font-size: 1.5rem;
@@ -374,7 +372,7 @@ li {
 label {
   display: block;
   font-weight: bold;
-  color:  #326892;
+  color: #326892;
 }
 
 .radio-buttons {
@@ -384,7 +382,6 @@ label {
 textarea {
   width: 300px;
   height: 100px;
-  
 }
 
 button {
